# ChuQin

./: .editorconfig  .gitignore  .prettierrc  .typos.toml  AGENTS.md  Cargo.toml  README.md  README_CN.md  build.py  index.html  package.json  pnpm-lock.yaml  project.spec  pyproject.toml  rustfmt.toml  vite.config.ts
.github/workflows/: ci_python.yml  ci_rust.yml  release_dev.yml  release_windows_latest.yml
app/: cli.py  cli_gitee.py  cli_pdf.py  cli_ppt.py  cli_volcengine.py  config.py  gitee.py  main.py  pdf_to_ppt.py  ppt.py  services.py  volcengine.py
app/common/: cli_errors.py
app/ppt/: cli.py
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: excel.rs  mod.rs  outlook.rs  pdf.rs  ppt.rs  word.rs
core/: Cargo.toml
core/src/: config.rs  context.rs  error.rs  fs.rs  lib.rs  outlook.rs  ppt.rs  word.rs  zip_utils.rs
core/src/config/: mod.rs  model.rs  store.rs  update.rs
core/src/excel/: create.rs  generator.rs  mod.rs
core/src/outlook/: mod.rs  outlook.rs
core/src/ppt/: config.rs  create.rs  generator.rs  mod.rs  templates.rs
core/src/util/: mod.rs  paths.rs  zip_utils.rs
core/src/word/: config.rs  create.rs  generator.rs  mod.rs  templates.rs
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: events.rs  lib.rs  window_state.rs
desktop/src/commands/: auth.rs  config.rs  excel.rs  files.rs  mod.rs  outlook.rs  ppt.rs  word.rs
docs/cli/: README.md  excel.md  gitcode.md  gitee.md  outlook.md  pdf.md  ppt.md  volcengine.md  word.md
docs/commands/: README.md  commands.md  files.md  ppt.md  word.md
docs/config/: README.md
docs/tauri-commands/: README.md  config.md  excel.md  files.md  outlook.md  ppt.md  word.md
docs/ui/: README.md
docs/ui/tools/: README.md
integrations/js/: README.md  package.json
integrations/js/src/: cli.js  config.js
integrations/rust/: Cargo.toml  README.md
integrations/rust/src/: config.rs  main.rs
launcher/: README.md  create_dock_shortcut.py
macos_launcher/: README.md  create_dock_shortcut.py
portal/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
portal/src/: App.vue  index.html  styles.css
python/: __init__.py  cli.py  config.py  main.py  skill.py
python/gitcode/: cli.py
python/gitee/: cli.py
python/outlook/: cli.py
python/volcengine/: cli.py
python/word/: cli.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  database.rs  huaweicloud.rs  lib.rs  main.rs
src/components/: Settings.vue  ToolGrid.vue
src/router/: index.ts
src/views/: AiChat.vue  Base64Converter.vue  FlywayCleaner.vue  HexConverter.vue  HuaweicloudToken.vue  JsonFormatter.vue  Md5.vue  Timestamp.vue  UrlCodec.vue
tests/: test_gitee_repo_cli.py  test_pdf_to_ppt_cli.py  test_ppt_cli.py  test_volcengine_video.py
ui/: App.css  App.tsx  main.tsx  window.css
ui/components/app-shell/: AppTitlebar.css  AppTitlebar.tsx
ui/components/apps/: AppSidebarSection.css  AppSidebarSection.tsx  CodeManagerApp.tsx  appDefinitions.ts
ui/components/file-actions/: FileActionDialogs.css  FileActionDialogs.tsx  useFileActions.ts
ui/components/main-area/: CodeManagerApp.css  CodeManagerApp.tsx  DigestTool.css  DigestTool.tsx  FileEditor.css  FileEditor.tsx  MainArea.css  (+4 more)
ui/config/: build.ts
ui/data/: tools.ts
ui/hooks/: useAppLayout.ts  useFileExplorer.ts  useMainAreaTabs.ts  useToolRunner.ts
ui/i18n/: index.ts  locales.ts  resources.ts
ui/lib/: config.ts  digests.ts  events.ts  fileHandlers.ts  tools.ts
ui/styles/: base.css  layout.css  responsive.css  titlebar.css
ui/types/: apps.ts  fileExplorer.ts  fileTree.ts  index.ts  mainAreaTabs.ts  settings.ts  sidebarSections.ts  toolRuns.ts  tools.ts
(+39 files in other folders)
