[workspace]
members = [
  "crates/app",
  "crates/cli",
  "crates/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["ChuQin Contributors"]
repository = "https://github.com/hezhangjian/ChuQin"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
