[project]
name = "chuqin"
version = "0.0.1"
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "pywebview>=6.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "mypy",
    "ruff",
    "types-pyinstaller",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/hezhangjian/ChuQin"
Repository = "https://github.com/hezhangjian/ChuQin"
Documentation = "https://github.com/hezhangjian/ChuQin#readme"

[tool.mypy]
python_version = "3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "launcher*"]
exclude = ["portal*"]

[tool.ruff]
line-length = 120
