[project]
name = "chuqin"
version = "0.0.1"
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pywebview>=6.0.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "mypy",
    "ruff",
    "types-pyinstaller",
]
test = [
    "pytest",
]

[project.scripts]
chuqin = "python.cli.main"

[project.urls]
Homepage = "https://github.com/hezhangjian/ChuQin"
Repository = "https://github.com/hezhangjian/ChuQin"
Documentation = "https://github.com/hezhangjian/ChuQin#readme"

[tool.mypy]
python_version = "3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["python*", "launcher*"]
exclude = ["portal*"]

[tool.ruff]
line-length = 120
