[package]
name = "chuqin-core"
version.workspace = true
edition.workspace = true

[lib]
name = "chuqin_core"
path = "src/lib.rs"

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
