[package]
name = "chuqin-core"
version.workspace = true
edition.workspace = true

[lib]
name = "chuqin_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
ppt-rs = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"
walkdir = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
