[package]
name = "chuqin-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "chuqin_app"
path = "src/lib.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde_json.workspace = true
tauri.workspace = true
chuqin-core = { path = "../core" }
